--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "scripts": {
     "start": "node ./backend/bin/www"
   },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "morgan": "~1.9.1"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/yavilavi/friends-app.git"
