--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "start:dev": "DEBUG=backend:* nodemon ./bin/www"
+    "start": "DEBUG=backend:* node ./bin/www",
+    "start:dev": "DEBUG=backend:* nodemon ./bin/www",
   },
   "dependencies": {
     "body-parser": "^1.18.3",
@@ -15,5 +15,23 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
+  },
+  "eslintConfig": {
+    "extends": [
+      "react-app",
+      "react-app/jest"
+    ]
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
