--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "DEBUG=backend:* node ./bin/www",
-    "start:dev": "DEBUG=backend:* nodemon ./bin/www",
+    "start:dev": "DEBUG=backend:* nodemon ./bin/www"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
