--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node ./backend/bin/www && echo done"
+    "start": "cd backend && npm install && cd .. && cd frontend && npm install && npm run build && cd .. && node ./backend/bin/www"
   },
   "repository": {
     "type": "git",
