--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cd backend && npm install && cd .. && cd frontend && npm install && npm run build && cd .. && node ./backend/bin/www"
+    "start": "cd backend && npm install && cd .. && cd frontend && npm install && npm run build && cd .. && npm install && node ./backend/bin/www"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,9 @@
   "bugs": {
     "url": "https://github.com/yavilavi/friends-app/issues"
   },
-  "homepage": "https://github.com/yavilavi/friends-app#readme"
+  "homepage": "https://github.com/yavilavi/friends-app#readme",
+  "engines": {
+    "node": "14.16.0",
+    "npm": "7.7.4"
+  }
 }
