Back connected with front

--- a/package.json
+++ b/package.json
@@ -4,7 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cd backend && npm install && cd .. && cd frontend && npm install && npm run build && cd .. && npm install && node ./backend/bin/www"
+    "start": "cd frontend && npm install && npm run build && cd .. && node ./backend/bin/www"
+  },
+  "dependencies": {
+    "body-parser": "^1.18.3",
+    "cookie-parser": "~1.4.4",
+    "debug": "~2.6.9",
+    "express": "~4.16.1",
+    "morgan": "~1.9.1"
   },
   "repository": {
     "type": "git",
