--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "cd frontend && npm install && npm run build && cd .. && node ./backend/bin/www"
+    "start": "node ./backend/bin/www"
   },
   "dependencies": {
     "body-parser": "^1.18.3",
